2005-01-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Use the generic games-scores-dialog rather than our
	custom one. Also make scores permanently sensitive so people can
	view the high score lists for the other sizes. Also cleanup some
	unnecessarily compilcated code to do with the scoring.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* minefield.c (_setup_sign): Preimage API update, uri -> file.

2004-11-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Fix the window placement check. && instead of
	||, it allows a negative placement. Also move to later so that the
	window->window dereference doesn't segfault. The cause of bug
	#150186 ? Possibly, but they don't mention session-management.
	
	Also changed some checks to avoid GTK warnings when things are set
	to negative values.

	Also replace home-brew range () with glib's CLAMP ().

2004-11-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Use gtk_window_set_default_icon_name (via
	Paolo Borelli).

2004-09-25  Richard Hoelscher  <rah@rahga.com>

	* minefield.h
	* minefield.c (gtk_minefield_init): switch to GamesPreimage.
	(_setup_sign): Replace gdk_pixbuf_scale_simple with
	games_preimage_render.
	
2004-09-06  callum  <callum@spooky-possum.org>

	* gnomine.c (show_face): Remove debugging code and make the face
	change again (Fixes bug 151931).

2004-08-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Remove the explicit call to
	gtk_widget_set_size_request for the face button. This clips the
	image badly. Fixes bug #144801.

2004-08-17  callum  <callum@spooky-possum.org>

	* gnomine.c: Fix up the checking code for nmines so that we can't
	set nmines too high with gconf-editor.

2004-08-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (fill_score_list): Change the high score reporting to
	avoid a rounding error which could drop a second from the
	times. See bug #149549.
